<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/order_name"
        android:hint="@string/order_name_field"
        android:layout_width="wrap_content"
        android:layout_weight=".30"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/order_location"
        android:hint="@string/order_location_field"
        android:layout_width="wrap_content"
        android:layout_weight=".40"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/order_phone_number"
        android:hint="@string/order_phone_field"
        android:layout_width="wrap_content"
        android:layout_weight=".20"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_price"
            android:hint="@string/order_price_field"
            android:layout_width="wrap_content"
            android:layout_weight=".10"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/order_price_adjust"
            android:hint="@string/order_price_adjust_field"
            android:layout_width="wrap_content"
            android:layout_weight=".10"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/order_product_id"
            android:hint="@string/order_product_id_field"
            android:layout_width="wrap_content"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/order_status"
            android:hint="@string/order_status_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"/>
    </LinearLayout>
</LinearLayout>

