<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_gravity="end"
        >

        <Button
            android:id="@+id/btnDownload" android:enabled="false"
            android:onClick="buttonClickHandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_orders_list"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/buttonGrey"
            />

        <Button
            android:id="@+id/sign_out"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonYellow"
            android:text="@string/sign_out_text"
            android:textSize="8sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_name_ex"
                android:text="@string/order_name_field"
                android:layout_width="wrap_content"
                android:layout_weight=".10"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/order_location_ex"
                android:text="@string/order_location_field"
                android:layout_width="wrap_content"
                android:layout_weight=".50"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_phone_number_ex"
                android:text="@string/order_phone_field"
                android:layout_width="wrap_content"
                android:layout_weight=".10"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_price_ex"
                android:text="@string/order_price_field"
                android:layout_width="wrap_content"
                android:layout_weight=".10"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_price_adjust_ex"
                android:text="@string/order_price_adjust_field"
                android:layout_width="wrap_content"
                android:layout_weight=".10"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_product_id_ex"
                android:text="@string/order_product_id_field"
                android:layout_width="wrap_content"
                android:layout_weight=".10"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/order_status_ex"
                android:text="@string/order_status_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ListView
                android:id="@+id/listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout="@+id/btnDownload" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>