<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/scan_item"
            android:text="@string/scan_item_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/scan_client"
            android:text="@string/scan_client_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/photo_taken_display"
            android:contentDescription="@string/scanned_code_image"
            android:layout_width="500px"
            android:layout_height="500px" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>