<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppSettings">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="end">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/anonymizer_pre_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/anonymizer_prefix_text"/>
        <EditText
            android:id="@+id/anonymizer_pre_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/anonymizer_prefix_hint"
            android:inputType="phone"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/enable_scanner_capability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/code_scanner_state" />

        <Switch
            android:id="@+id/scanner_capability_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <ImageButton
            android:id="@+id/savePreferencesBtn"
            android:text="@string/save_preferences"
            android:src="@drawable/ic_save_black_24dp"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:background="@color/buttonYellow"
            />

    </LinearLayout>

</LinearLayout>

</android.support.constraint.ConstraintLayout>